--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NODE_PORT=8000
 
-MONGO_USER=root
-MONGO_PW=anka
-MONGO_URI=mongodb://root:example@localhost:27017/ 
+MONGO_USER=saliha
+MONGO_PW=SSanka93.
+MONGO_URI=mongodb://salihasoyturk:ankageo@localhost:27017/
