--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "mongodb-test",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/salihasoyturk/mongodb-test.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/salihasoyturk/mongodb-test/issues"
-  },
-  "homepage": "https://github.com/salihasoyturk/mongodb-test#readme",
-  "dependencies": {
-    "express": "^4.18.1",
-    "mongoose": "^6.3.8"
-  }
+	"name": "mongo-tests",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "nodemon index.js"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
+		"mongoose": "^6.3.8"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.16"
+	}
 }
